--- a/templates/product.html
+++ b/templates/product.html
@@ -1,12 +1,18 @@
 {% extends 'index.html' %}
 {% block title %} {{ title }} {% endblock title %}
-
+{% block style %} 
+<style>
+    a{
+        text-decoration: none;
+    }
+</style>
+ {% endblock style %}
 {% block content %}
 <div class="container">
     <h1>Products on Our Website</h1>
     <div class="container">
         {% for i in products %}
-            <h3>{{ i.productname }}</h3>
+            <h3><a href="productdetails/{{i.id}}">{{ i.productname }}</a></h3>
             <img src="{{ i.imageurl }}" alt="product image" width="200">
             <h6>Price: {{ i.price }}$</h6>
             <form action="/product" method="post">
