--- a/templates/admin.html
+++ b/templates/admin.html
@@ -20,7 +20,7 @@
         {% for i in products %}
             <h3>{{ i.productname }}</h3>
             <img src="{{ i.imageurl }}" alt="product image" width="200">
-            <h6>Price: {{ i.price }}$</h6>
+            <h6>Price: ${{ i.price }}</h6>
             <a href="/update/{{ i.id }}">Update</a>
             <a href="/delete/{{ i.id }}">Delete</a>
         {% endfor %}
