--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -1,13 +1,28 @@
 {% extends 'index.html' %}
+{% block css %}
+<link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/checkout.css') }}"> {% endblock css %}
 {% block title %} {{ title }} {% endblock title %}
 
-{% block content %} 
+{% block content %}
 <div class="container">
-     
-    <img src="" alt="" srcset="">
-
+    <form class="checkout">
+        <div class="checkout-header">
+            <h1 class="checkout-title">
+                Checkout
+            </h1>
+        </div>
+        <p>
+            <input type="text" class="checkout-input checkout-name" placeholder="Your name">
+            <input type="text" class="checkout-input checkout-exp" placeholder="MM">
+            <input type="text" class="checkout-input checkout-exp" placeholder="YY">
+        </p>
+        <p>
+            <input type="text" class="checkout-input checkout-card" placeholder="4111 1111 1111 1111">
+            <input type="text" class="checkout-input checkout-cvc" placeholder="CVC">
+        </p>
+        <p>
+            <input type="submit" value="Purchase ${{ t }}" class="checkout-btn">
+        </p>
+    </form>
 </div>
-
-
-
 {% endblock content %}
