Added navigation, 20 products, response 200 success page

--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -4,6 +4,7 @@
 {% block title %} {{ title }} {% endblock title %}
 
 {% block content %}
+{% block nav %} {% endblock nav %}
 <div class="container">
     <form class="checkout">
         <div class="checkout-header">
