when user clicks cart then it sends request to backend throught check-cart if it is 200 then goes to cart page and similar to checkout and final payment

--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -7,7 +7,7 @@
 {% block content %}
 {% block nav %} {% endblock nav %}
 <div class="container">
-    <form action="/success" name="card" method="POST" class="checkout">
+    <form action="/check-card" name="card" method="POST" class="checkout">
         <div class="checkout-header">
             <h1 class="checkout-title">
                 Checkout
