--- a/templates/cart.html
+++ b/templates/cart.html
@@ -1,5 +1,11 @@
 {% extends 'index.html' %}
 {% block title %} {{ title }} {% endblock title %}
+{% block js %}
+<script>
+    
+</script>
+{% endblock js %}
+
 {% block content %}
 <div class="container">
     <div class="row">
@@ -29,8 +35,8 @@
                 <tr>
                     <td></td>
                     <td>
-                        <form action="/checkout" method="POST">                           
-                            <input type="submit" href="/checkout" value="Checkout">
+                        <form action="/check-checkout" method="POST">                           
+                            <input type="submit" href="/check-checkout" value="Checkout">
                         </form>
                     </td>
                     <td><a href="{{url_for('clearcart')}}">Cancel(Clear Cart)</a></td>
