added db as json

--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -1,6 +1,6 @@
 {% extends 'index.html' %}
 {% block css %}
-<link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='styles/checkout.css') }}"> 
+<link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='css/checkout.css') }}"> 
 {% endblock css %}
 {% block title %} {{ title }} {% endblock title %}
 
