--- a/templates/index.html
+++ b/templates/index.html
@@ -6,6 +6,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
     {% block css %} {% endblock css %}
+    <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/style.css')}}">
+    <link rel="icon" type="image/png" href="{{url_for('static', filename='images/favicon.ico')}}">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
     <style>
         .font1 {
             font-family: 'Courier New', Courier, monospace;
@@ -19,33 +23,47 @@
             text-decoration: none;
         }
     </style>
-    {% block js %} {% endblock js %}
     <title>{% block title %} {% endblock title %}</title>
 </head>
-
 <body>
     {% block nav %}
     <nav>
-        <a href="{{url_for('home')}}">Home</a>
-        <a href="/product">Products<a>
-        <!-- <a  type="submit" href="/cart">Cart({{ session['Shoppingcart']|length }})</a> -->
-        <form style="display: inline;" method="POST" action="/check-cart"  id="cartpage">
-            <button type="submit"><a href="/check-cart">Cart({{ session['Shoppingcart']|length }})</a></button>            
-        </form>
+        <div class="bd-example">
+            <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+                <div class="container-fluid">
+                    <a class="navbar-brand" href="{{url_for('home')}}">SHOP</a>
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
+                    data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false"
+                    aria-label="Toggle navigation">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="collapse navbar-collapse" id="navbarColor01">
+                    <ul class="navbar-nav me-auto mb-2 mb-lg-0">
+                        <li class="nav-item">
+                            <a class="nav-link active" aria-current="page" href="{{url_for('home')}}">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link" href="/product">Products</a>
+                        </li>
+                        <li class="nav-item">
+                            <form class="d-flex" method="POST" action="/check-cart" id="cartpage">
+                                <button class="btn btn-outline-light" type="submit"><a class="link-info"
+                                    href="/check-cart">Cart({{session['Shoppingcart']|length }})</a></button>
+                                </form>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+            </nav>
+        </div>
     </nav>
     {% endblock nav %}
     {% block content %} {% endblock content %}
-    <script>
-        const myCart = document.getElementById('cartpage');
-        myCart.addEventListener("submit", (e)=>{
-            e.preventDefault();
-            const request = new XMLHttpRequest();
-            request.open("post", "check-cart.html");
-            request.onload = function(){
-                console.log(request.responseText);
-            }
-        });
-    </script>
+    
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+    crossorigin="anonymous"></script>
+    {% block js %} {% endblock js %}
 </body>
 
 </html>
