--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -25,10 +25,33 @@
         </p>
         <p>
             {% set total = t %}            
-            <input type="submit" name="purchase" value="Purchase ${{ total }}" class="checkout-btn">
+            <input onclick="button_click()" type="submit" name="purchase" value="Purchase ${{ total }}" class="checkout-btn">
         </p>
     </form>
 </div>
 {% endblock content %}
 
-{% block js %} {% endblock js %}
+{% block js %} 
+<script>
+    function button_click(){
+        // console.log('hi')
+        var xml = new XMLHttpRequest();
+        xml.open("POST","{{url_for('checkcard')}}",true); 
+        xml.setRequestHeader("Content-type","application/x-www-form-urlencoded");
+        
+        dataSend= JSON.stringify({   });
+        xml.send(dataSend);
+        
+        xml.onload = function(){
+            var dataReply = this.responseText;
+            // alert(dataReply)
+            // console.log(dataReply)
+            if (dataReply == 200){
+                window.location.href = "{{url_for('success')}}";
+            }else{
+                window.location.href = "{{url_for('error')}}";
+            }
+        };
+    }
+</script>
+{% endblock js %}
