--- a/templates/index.html
+++ b/templates/index.html
@@ -50,10 +50,8 @@
                             <li class="nav-item">
                                 <a class="nav-link" href="/product">Products</a>
                             </li>
-                            <li class="nav-item">
-                                <form class="d-flex" method="POST" action="/cart" id="cartpage">
-                                    <button onclick="bclick()" class="btn btn-outline-light" type="submit"><a class="link-info" href="">{% block cart %} {% endblock cart %}</a></button>
-                                </form>
+                            <li class="nav-item">                                
+                                    <button  class="btn btn-outline-light" onclick="button_click()" type="submit">{% block cart %} {% endblock cart %}</button>                                
                             </li>
                         </ul>
                     </div>
@@ -70,19 +68,25 @@
     {% endblock bootstrapjs %}
     {% block js %} {% endblock js %}
     <script>
-        function bclick(){
-            console.log('hi')
-            fetch('/cart',{
-                method:'POST'
-            }).then(res => {
-                if(res.ok){
-                    window.location = "/cart"
-                    console.log('htis is run')
+        function button_click(){
+            // console.log('hi')
+            var xml = new XMLHttpRequest();
+            xml.open("POST","{{url_for('checkcart')}}",true); 
+            xml.setRequestHeader("Content-type","application/x-www-form-urlencoded");
+            
+            dataSend= JSON.stringify({   });
+            xml.send(dataSend);
+            
+            xml.onload = function(){
+                var dataReply = this.responseText;
+                // alert(dataReply)
+                // console.log(dataReply)
+                if (dataReply == 200){
+                    window.location.href = "{{url_for('cart')}}";
                 }else{
-                    window.location = '/'
-                    console.log('htis is run')
+                    window.location.href = "{{url_for('error')}}";
                 }
-            }).then(error=>console.log("Success"))
+            };
         }
     </script>
 </body>
