--- a/templates/success.html
+++ b/templates/success.html
@@ -2,5 +2,5 @@
 {% block css %} {% endblock css %}
 {% block title %} {{ title }} {% endblock title %}
 {% block content %}
-<h2>The Payment of {{ purchase }} was Successful</h2>
+<h2>The Payment of ${{ purchase }} was Successful</h2>
 {% endblock content %}
