--- a/templates/checkout.html
+++ b/templates/checkout.html
@@ -8,7 +8,7 @@
 {% block nav %} {% endblock nav %}
 {% block content %}
 <div class="container">
-    <form action="/success" name="card" method="POST" class="checkout">
+    <form action="/check-payment" name="card" method="POST" class="checkout">
         <div class="checkout-header">
             <h1 class="checkout-title">
                 Checkout
@@ -25,7 +25,8 @@
         </p>
         <p>
             {% set total = t %}            
-            <input  type="submit" name="purchase" value="Purchase ${{ total }}" class="checkout-btn">
+            <!-- <input  type="submit" onclick="button_click()" name="purchase" value="Purchase ${{ total }}" class="checkout-btn"> -->
+            <button onclick="button_click()" type="submit" class="checkout-btn" name="purchase" value="{{total}}">Purchase ${{ total }}</button>
         </p>
     </form>
 </div>
@@ -33,25 +34,26 @@
 
 {% block js %} 
 <script>
-    function button_click(){
-        // console.log('hi')
-        var xml = new XMLHttpRequest();
-        xml.open("POST","{{url_for('checkcard')}}",true); 
-        xml.setRequestHeader("Content-type","application/x-www-form-urlencoded");
-        
-        dataSend= JSON.stringify({});
-        xml.send(dataSend);
-        
-        xml.onload = function(){
-            var dataReply = this.responseText;
-            alert(dataReply)
-            // console.log(dataReply)
-            if (dataReply == 200){
-                window.location.href = "{{url_for('success')}}";
-            }else{
-                window.location.href = "{{url_for('error')}}";
-            }
-        };
-    }
+   function button_click(){
+            // console.log('hi')
+            // alert("hi")
+            var xml = new XMLHttpRequest();
+            xml.open("POST","{{url_for('checkpayment')}}",true); 
+            xml.setRequestHeader("Content-type","application/x-www-form-urlencoded");
+            
+            dataSend= JSON.stringify({   });
+            xml.send(dataSend);
+            
+            xml.onload = function(){
+                var dataReply = this.responseText;
+                // console.log(dataReply)
+                if (dataReply == 200){
+                    // alert(dataReply)
+                    window.location.href = "{{url_for('success')}}";
+                }else{
+                    window.location.href = "{{url_for('error')}}";
+                }
+            };
+        }
 </script>
 {% endblock js %}
