--- a/templates/index.html
+++ b/templates/index.html
@@ -66,29 +66,8 @@
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
     {% endblock bootstrapjs %}
-    {% block js %} {% endblock js %}
-    <script>
-        function button_click(){
-            // console.log('hi')
-            var xml = new XMLHttpRequest();
-            xml.open("POST","{{url_for('checkcart')}}",true); 
-            xml.setRequestHeader("Content-type","application/x-www-form-urlencoded");
-            
-            dataSend= JSON.stringify({   });
-            xml.send(dataSend);
-            
-            xml.onload = function(){
-                var dataReply = this.responseText;
-                // alert(dataReply)
-                // console.log(dataReply)
-                if (dataReply == 200){
-                    window.location.href = "{{url_for('cart')}}";
-                }else{
-                    window.location.href = "{{url_for('error')}}";
-                }
-            };
-        }
-    </script>
+    {% block js %}
+    {% endblock js %}
 </body>
 
 </html>
