--- a/templates/success.html
+++ b/templates/success.html
@@ -4,3 +4,4 @@
 {% block content %}
 <h2>The Payment of ${{ purchase }} was Successful</h2>
 {% endblock content %}
+{% block js %}  {% endblock js %}
