--- a/static/css/style.css
+++ b/static/css/style.css
@@ -2,3 +2,11 @@
     margin:0;
     padding:0;
 }
+
+footer {
+    position: unset;
+    bottom:0;
+    width:100%;
+    height:74px;   /* Height of the footer */
+    background:#6cf;
+ }
