--- a/templates/index.html
+++ b/templates/index.html
@@ -4,23 +4,19 @@
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-    {% block css %} {% endblock css %}
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no"> {% block css %} {% endblock css %}
     <link rel="stylesheet" type="text/css" href="{{url_for('static', filename='css/style.css')}}">
-    <link rel="icon" type="image/png" href="{{url_for('static', filename='images/favicon.ico')}}">
-    {% block bootstrap %}
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous">
-    {% endblock bootstrap %}
+    <link rel="icon" type="image/png" href="{{url_for('static', filename='images/favicon.ico')}}"> {% block bootstrap %}
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-EVSTQN3/azprG1Anm3QDgpJLIm9Nao0Yz1ztcQTwFspd3yD65VohhpuuCOmLASjC" crossorigin="anonymous"> {% endblock bootstrap %}
     <style>
         .font1 {
             font-family: 'Courier New', Courier, monospace;
         }
-
+        
         .font-size {
             font-size: large;
         }
-
+        
         a {
             text-decoration: none;
         }
@@ -32,12 +28,10 @@
     {% block nav %}
     <nav>
         <div class="bd-example">
-            <nav class="navbar navbar-expand-sm navbar-dark bg-dark">
+            <nav class="navbar navbar-expand-sm navbar-light bg-warning" style="background-color:rgb(19, 118, 204)">
                 <div class="container-fluid">
                     <a class="navbar-brand" href="{{url_for('home')}}">SHOP</a>
-                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse"
-                    data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false"
-                        aria-label="Toggle navigation">
+                    <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarColor01" aria-controls="navbarColor01" aria-expanded="false" aria-label="Toggle navigation">
                         <span class="navbar-toggler-icon"></span>
                     </button>
                     <div class="collapse navbar-collapse" id="navbarColor01">
@@ -48,10 +42,10 @@
                                 <a class="nav-link active" aria-current="page" href="{{url_for('home')}}">Home</a>
                             </li>
                             <li class="nav-item">
-                                <a class="nav-link" href="/product">Products</a>
+                                <a class="nav-link active" href="/product">Products</a>
                             </li>
-                            <li class="nav-item">                                
-                                    <button  class="btn btn-outline-light" onclick="button_click()" type="submit">{% block cart %} {% endblock cart %}</button>                                
+                            <li class="nav-item">
+                                <button class="btn " onclick="button_click()" type="submit">{% block cart %} {% endblock cart %}</button>
                             </li>
                         </ul>
                     </div>
@@ -59,15 +53,22 @@
             </nav>
         </div>
     </nav>
-    {% endblock nav %}
-    {% block content %} {% endblock content %}
-    {% block bootstrapjs %}
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
-        crossorigin="anonymous"></script>
-    {% endblock bootstrapjs %}
-    {% block js %}
-    {% endblock js %}
+    {% endblock nav %} {% block content %} {% endblock content %} {% block bootstrapjs %}
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
+    {% endblock bootstrapjs %} {% block js %} {% endblock js %}
 </body>
+
+
+{% block footer %}
+<footer class="pt-1 text-muted text-center text-small sticky-bottom">
+    <p class="mb-1">© 2021–2022 Shop</p>
+    <ul class="list-inline">
+        <li class="list-inline-item"><a href="#">Privacy</a></li>
+        <li class="list-inline-item"><a href="#">Terms</a></li>
+        <li class="list-inline-item"><a href="#">Support</a></li>
+    </ul>
+</footer>
+{% endblock footer %}
+
 
 </html>
