--- a/templates/product.html
+++ b/templates/product.html
@@ -1,7 +1,9 @@
 {% extends 'index.html' %}
 {% block title %} {{ title }} {% endblock title %}
 {% block content %}
-
+{% block css %}
+<link rel="stylesheet" type="text/css" href="{{ url_for('static',filename='css/product.css') }}">
+{% endblock css %}
 
 {% endblock content %}
 {% block cart %} Cart ({{ l }}){% endblock cart %}
@@ -11,44 +13,94 @@
     var products = JSON.parse('{{ products | tojson | safe}}');
     // console.log(products)
     document.getElementById('app').innerHTML = `
-    <h1 class="app-title"> No of Products (${products.length} results)</h1>
+    <div class="container">
+        <small class="app-title container"><em> No of Products (${products.length} results)<em></small>
+        <button onclick="clearData()" class="float-right"><a href="/clearcart">ClearData(For Dev Purpose)</a></button>
+    </div>    
     ${products.map(function (p) {
-        return `
-        <div class="container m-4">
-            <h3><a href="productdetails/${p.id}">${p.name}</a></h3>
-                <img width=330 src="${p.imgurl}">
-            <h6 class="font1 font-size" style="margin:10px">Price: $${p.price}</h6>
-            <form action="/product" method="post">
-                <input name="pid" type="hidden" value="${p.id}">    
-                <input name="quantity" type="number" value="${p.quantity}"  min="1" max="${p.stock}">    
-                <input type="submit" value="Add to Cart">
-            </form>
+        return `    
+    <div class="container d-flex justify-content-center">
+    <figure class="card card-product-grid card-lg"> <a href="productdetails/${p.id}" class="img-wrap" data-abc="true"> <img class="img-fluid" src="${p.imgurl}"> </a>
+        <figcaption class="info-wrap">
+            <div class="row">
+                <div class="col-md-9 col-xs-9"> <a href="productdetails/${p.id}" class="title" data-abc="true">${p.name}</a> <span class="rated">Smartphones</span> </div>
+                <div class="col-md-3 col-xs-3">
+                    <div class="rating text-right"> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <i class="fa fa-star"></i> <span class="rated">Rated 4.0/5</span> </div>
+                </div>
+            </div>
+        </figcaption>
+        <div class="bottom-wrap-payment">
+            <figcaption class="info-wrap">
+                <div class="row">
+                    <div class="col-md-9 col-xs-9"> <a href="#" class="title" data-abc="true">$${p.price}</a> <span class="rated">VISA Platinum</span> </div>                
+                </div>
+            </figcaption>
         </div>
+        <div class="bottom-wrap"> 
+            <form action="/product" method="post" class="price-wrap">
+                    <input name="pid" type="hidden" value="${p.id}">                      
+                    <div class="d-flex">
+                        <div class="input-group mb-3 float-left">                                             
+                                <span class="left input-group-text" id="addon-wrapping">Add products to cart</span>
+                                <input name="quantity" type="number" class="right form-control float-left" value="${p.quantity}"  min="1" max="${p.stock}">                               
+                        </div>                        
+                        <div class="container float-right">
+                            <input type="submit" class="btn  .btn-lg btn-warning btn btn-primary" value="Add to Cart">                                       
+                        </div>
+                    </div>  
+            </form>            
+        </div>
+    </figure>
+</div>
         `
     }).join('')}
         `
 </script>
 
 <script>
-    function button_click(){
-        // console.log('hi')
+    function button_click() {
         var xml = new XMLHttpRequest();
-        xml.open("POST","{{url_for('checkcart')}}",true); 
-        xml.setRequestHeader("Content-type","application/x-www-form-urlencoded");
-        
-        dataSend= JSON.stringify({   });
+        xml.open("POST", "{{url_for('checkcart')}}", true);
+        xml.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
+
+        dataSend = JSON.stringify({"product":"product"});
         xml.send(dataSend);
-        
-        xml.onload = function(){
+
+        xml.onload = function () {
             var dataReply = this.responseText;
-            // alert(dataReply)
-            // console.log(dataReply)
-            if (dataReply == 200){
+            if (dataReply == 200) {
                 window.location.href = "{{url_for('cart')}}";
-            }else{
+            } else {
                 window.location.href = "{{url_for('error')}}";
             }
         };
     }
-    </script>
+</script>
+<script>
+    // For dev purpose only (clearing all data)
+
+    function clearData() {
+        sessionStorage.clear()
+
+        localStorage.clear()
+
+        caches.keys().then(keys => {
+            keys.forEach(key => caches.delete(key))
+        })
+
+        indexedDB.databases().then(dbs => {
+            dbs.forEach(db => indexedDB.deleteDatabase(db.name))
+        })
+
+        document.cookie = document.cookie.split(';').reduce((newCookie1, keyVal) => {
+            var pair = keyVal.trim().split('=')
+            if (pair[0]) {
+                if (pair[0] !== 'path' && pair[0] !== 'expires') {
+                    newCookie1 += pair[0] + '=;'
+                }
+            }
+            return newCookie1
+        }, 'expires=Thu, 01 Jan 1970 00:00:00 UTC; path:/;')
+    }
+</script>
 {% endblock js %}
