--- a/templates/productdetails.html
+++ b/templates/productdetails.html
@@ -1,51 +1,63 @@
-{% extends 'index.html' %}
-{% block title %} {{ title }} {% endblock title %}
-{% block css %}
-<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/productdetails.css') }}">
-{% endblock css %}
-{% block cart %} Cart ({{ l }}){% endblock cart %}
-{% block content %}
-{% endblock content %}
-{% block js %}
+{% extends 'index.html' %} {% block title %} {{ title }} {% endblock title %} {% block css %}
+<link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='css/productdetails.css') }}"> {% endblock css %} {% block cart %} Cart ({{ l }}){% endblock cart %} {% block content %} {% endblock content %} {% block js %}
 <div id="app"></div>
+<style>footer{position:absolute}</style>
 <script>
     id = '{{id}}' - 1;
     var products = JSON.parse('{{ products | tojson | safe}}');
     document.getElementById('app').innerHTML = `
-    <h1 class="app-title"> No of Products (${products.length} results)</h1>
-    <div class="container m-4">
-            <h3>${products[id].name}</h3>
-            <img width=330 src="${products[id].imgurl}">
-            <h6 class="font1 font-size" style="margin:10px">Price: $${products[id].price}</h6>
-            <form action="/product" method="post">
-                <input name="pid" type="hidden" value="${ products[id].id }">   
-                <input name="quantity" type="number" value="${products[id].quantity}"  min="1" max="${products[id].stock}">  
-                <input name="submitcart" type="submit" value="Add to Cart">
-            </form>
-        </div>
+    <div class="container mt-5">
+        <div class="card border-0">
+            <div class="row g-0">
+                <div class="col-md-4">
+                        <img width=330 class="img-fluid" src="${products[id].imgurl}">
+                        </div>
+                        <div class="col-md-8">
+                            <div class="card-body">
+                                <h3 class="mx-2">${products[id].name}</h3>
+                                <h6 class="font1 font-size mx-2 my-4" style="margin:10px">Price: $${products[id].price}</h6>
+                                <div class="bottom-wrap mx-2 my-4"> 
+                                    <form action="/product" method="post" class="price-wrap">
+                                            <input name="pid" type="hidden" value="${products[id].id}">                      
+                                            <div class="d-flex container-fluid">
+                                                <div class="input-group mb-3 float-left">                                             
+                                                        <span class="left input-group-text" id="addon-wrapping">Add products to cart</span>
+                                                        <input name="quantity" type="number" class="right form-control float-left" value="${products[id].quantity}" min="1" max="${products[id].stock}">                               
+                                                </div>                        
+                                                <div class="container float-right mx-2 ">
+                                                    <input type="submit" class="btn  .btn-lg btn-warning btn btn-primary" value="Add to Cart">                                       
+                                                </div>
+                                            </div>  
+                                    </form>            
+                                </div>
+                            </div>
+                        </div>
+                </div>                         
+                </div>                         
+                </div>                         
     `
 </script>
 
 <script>
-    function button_click(){
+    function button_click() {
         // console.log('hi')
         var xml = new XMLHttpRequest();
-        xml.open("POST","{{url_for('checkcart')}}",true); 
-        xml.setRequestHeader("Content-type","application/x-www-form-urlencoded");
-        
-        dataSend= JSON.stringify({   });
+        xml.open("POST", "{{url_for('checkcart')}}", true);
+        xml.setRequestHeader("Content-type", "application/x-www-form-urlencoded");
+
+        dataSend = JSON.stringify({"product":"product"});
         xml.send(dataSend);
-        
-        xml.onload = function(){
+
+        xml.onload = function() {
             var dataReply = this.responseText;
             // alert(dataReply)
             // console.log(dataReply)
-            if (dataReply == 200){
+            if (dataReply == 200) {
                 window.location.href = "{{url_for('cart')}}";
-            }else{
+            } else {
                 window.location.href = "{{url_for('error')}}";
             }
         };
     }
-    </script>
+</script>
 {% endblock js %}
