--- a/templates/index.html
+++ b/templates/index.html
@@ -60,7 +60,7 @@
 
 
 {% block footer %}
-<footer class="pt-1 text-muted text-center text-small sticky-bottom">
+<footer class="my-5 pt-5 text-muted text-center text-small sticky-bottom">
     <p class="mb-1">© 2021–2022 Shop</p>
     <ul class="list-inline">
         <li class="list-inline-item"><a href="#">Privacy</a></li>
